--- a/raids/p5s.yaml
+++ b/raids/p5s.yaml
@@ -1,9 +1,12 @@
 id: 30117
+date: 2022-10-03
+modified: 2022-10-03
+author: 27637301
 tier: Abyssos
 boss: Proto-Carbuncle
 HP: 29844576
 enrage: 10:00
-description: Featuring mechanics with unforgiving snapshots that demand good team coordination and a quick eye, [fight] is one of the most dangerous first floor encounters the game has ever had. [boss]'s auto-attacks are physical, but its abilities feature a wide variety of magical and physical attacks. The fight also features a special Satiety Duty Gauge that gradually drains over the course of the fight, but you can essentially ignore it entirely.
+description: Featuring mechanics with unforgiving snapshots that demand good team coordination and a quick eye, [fight] is one of the most dangerous first floor encounters the game has ever had. [boss]'s auto-attacks are physical, but its abilities feature a wide variety of magical and physical attacks. The fight also features a special Satiety Duty Gauge that gradually drains over the course of the fight, but you can essentially ignore it entirely. An example is [a:30496].
 status:
   2911:  # Damage Down
     duration: 30.00
@@ -63,7 +66,7 @@ actions:
     description: High-damage raidwide that inflicts [s:2911] on every living party member.
   Caustic Pools:
     description: |
-      Spawns 4 caustic pools on the circular engravings in the arena floor – two on the inside, two on the outside. 10 orbs slowly encircle the puddle. After the tenth orb appears, the puddle will "resolve". At that time, there must be two players inside the puddle or [s:30476] will hit the closest player to the puddle, likely killing them and anyone nearby, and spawning a [n:11441] which will begin to cast [a:30477].
+      Spawns 4 caustic pools on the circular engravings in the arena floor – two on the inside, two on the outside. 10 orbs slowly encircle the puddle. After the tenth orb appears, the puddle will "resolve". At that time, there must be two players inside the puddle or [a:30476] will hit the closest player to the puddle, likely killing them and anyone nearby, and spawning a [n:11441] which will begin to cast [a:30477].
       Entering the puddle inflicts [s:3407], so it is recommended to stand on the outside of the pool and only enter your designated pool when there are only 1 or 2 missing orbs around the pool.
     strategy: Assign partners at the start of the fight. Tanks should always be paired with each other; the remaining partners can be assigned freely, but it is common to use role partners (melees with melees, healers with healers, ranged with ranged). Designate two pairs that always take outside pools and two pairs that always take inside pools. It is recommended to make the tanks and melee DPS take the inside pools, but the boss's hitbox is large enough that even melees can maintain full melee uptime from an outside pool.
     strategies:
@@ -71,7 +74,8 @@ actions:
         description: |
           One inside pair always starts north and goes clockwise until it finds a pool (most commonly tanks). The other inside pair does the opposite, starting west and going counter-clockwise until they find a pool. The same goes for the two outside pairs, but they start northeast and northwest, respectively.
           If you put markers on each of the pool spawn points (letters on the inside, numbers on the outside), another way to think about it is that you always take the first pooled marker in the sequence if you're the clockwise pair, and the last pooled marker in the sequence if you're the counter-clockwise pair. For instance, if there are pools on the B and C markers, the north pair would choose B, as it comes before C in the alphabet, and the other pair chooses C.
-  30492:  # Double Rush
+  30492:
+    name: Double Rush
     target: 0
     damage: 58000
     type: P
@@ -119,10 +123,12 @@ actions:
     description: |
       [boss] cleaves the arena in front of it with a heavy hit that inflicts [s:2911]. If the attack hits a ruby wall, the entire square will be bathed in [a:30457].
       In Savage, this attack is only ever used in combination with a ruby wall, so stay away from [boss] during this cast.
-  30482:  # Tail to Claw
+  30482:
+    name: Tail to Claw
     description: "Uses the following sequence of attacks: [a:30481] → 7 hits of [a:30479] (or: get in front → get behind)."
     note: Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind him just as [a:30481] comes out.
-  30478:  # Claw to Tail
+  30478:
+    name: Claw to Tail
     description: "Uses the following sequence of attacks: 7 hits of [a:30479] → [a:30481] (or: get behind → wait → get in front). The last hit of the [a:30479] sequence is the double claw finisher. This is your cue to switch sides, as [a:30481] will hit the rear immediately after, with no additional cast time."
     note: Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind it just as (or even *before*) the last hit of [a:30479] comes out.
   30793:  # Devour
