--- a/raids/p5s.yaml
+++ b/raids/p5s.yaml
@@ -6,11 +6,12 @@ tier: Abyssos
 boss: Proto-Carbuncle
 HP: 29844576
 enrage: 10:00
+required_dps: 49200
 description: Featuring mechanics with unforgiving snapshots that demand good team coordination and a quick eye, [fight] is one of the most dangerous first floor encounters the game has ever had. [boss]'s auto-attacks are physical, but its abilities feature a wide variety of magical and physical attacks. The fight also features a special Satiety Duty Gauge that gradually drains over the course of the fight, but you can essentially ignore it entirely. An example is [a:30496].
 status:
   2911:  # Damage Down
     duration: 30.00
-    description: Reduces damage dealt by approximately 40%.
+    description: Reduces damage dealt by approximately 25%.
   2940:  # Physical Vulnerability Up
     duration: 15.00
     description: Makes any physical damage received lethal.
@@ -22,7 +23,7 @@ status:
     description: Ticks 5 times for approximately 24,000 damage each tick.
   3407:  # Toxicosis (from puddles)
     duration: 999999.0
-    description: Ticks for approximately 18,000 damage each tick for as long as the player is standing inside the caustic pool.
+    description: Ticks for approximately 18,000 damage each tick for as long as the affected player is standing inside the caustic pool.
 actions:
   30496:  # Sonic Howl
     target: 0
