Fix identical names for 2 phase fights

--- a/raids/p4s2.yaml
+++ b/raids/p4s2.yaml
@@ -4,6 +4,7 @@ modified: 2022-10-03
 author: 27637301
 tier: Asphodelos
 boss: Hesperos
+suffix: " Part 2"
 HP: 29844576
 enrage: 8:26
 required_dps: 47900
