--- a/raids/p4s1.yaml
+++ b/raids/p4s1.yaml
@@ -4,6 +4,7 @@ modified: 2022-10-03
 author: 27637301
 tier: Asphodelos
 boss: Hesperos
+suffix: " Part 1"
 HP: 29844576
 enrage: 7:13
 required_dps: 48200
