--- a/raids/p8s1.yaml
+++ b/raids/p8s1.yaml
@@ -3,7 +3,7 @@ date: 2022-10-03
 modified: 2022-10-03
 author: 27637301
 tier: Abyssos
-boss: Hemitheos
+boss: Hephaistos
 suffix: " Part 1"
 HP: 29844576
 enrage: 10:00
