--- a/raids/e10s.yaml
+++ b/raids/e10s.yaml
@@ -1,9 +1,10 @@
-id: 30106
-patch: 6.11
-date: 2022-11-04
-modified: 2022-11-04
+id: 30100
+patch: 5.4
+date: 2022-11-18
+modified: 2022-11-18
 author: 27637301
-boss: Various
+tier: Eden's Promise
+boss: Shadowkeeper
 HP: 0
 enrage: 00:00
 required_dps: 0
@@ -12,7 +13,7 @@ description: Unknown
 status:
   2911:  # Damage Down
     duration: 30.00
-    description: Reduces damage dealt by approximately 50%.
+    description: Reduces damage dealt by approximately 25%.
 actions:
 timeline:
 macros:
