--- a/raids/p8s2.yaml
+++ b/raids/p8s2.yaml
@@ -4,7 +4,7 @@ date: 2022-10-03
 modified: 2022-10-03
 author: 27637301
 tier: Abyssos
-boss: Unknown
+boss: Hephaistos
 suffix: " Part 2"
 HP: 29844576
 enrage: 10:00
