Update content and styling

--- a/extremes/hydaelyns-call.yaml
+++ b/extremes/hydaelyns-call.yaml
@@ -1,8 +1,9 @@
 id: 20078
-patch: 6.0
+patch: "6.0"
 date: 2022-11-18
 modified: 2022-11-18
 author: 27637301
+tier: Endwalker MSQ
 boss: Hydaelyn
 HP: 0
 enrage: 00:00
