Fix categories, sorting, groups

--- a/extremes/limitless-blue.yaml
+++ b/extremes/limitless-blue.yaml
@@ -1,9 +1,9 @@
 id: 20034
-patch: 3.0
+patch: "3.0"
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Heavensward MSQ
+tier: Heavensward
 boss: Bismarck
 HP: 0
 enrage: 00:00
