--- a/extremes/nidhoggs-rage.yaml
+++ b/extremes/nidhoggs-rage.yaml
@@ -3,7 +3,7 @@ patch: 3.3
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Heavensward MSQ
+tier: Heavensward
 boss: Nidhogg
 HP: 0
 enrage: 00:00
