--- a/extremes/shinryus-domain.yaml
+++ b/extremes/shinryus-domain.yaml
@@ -3,7 +3,7 @@ patch: 4.1
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Stormblood MSQ
+tier: Stormblood
 boss: Shinryu
 HP: 0
 enrage: 00:00
