--- a/extremes/crown-of-the-immaculate.yaml
+++ b/extremes/crown-of-the-immaculate.yaml
@@ -1,9 +1,9 @@
 id: 20065
-patch: 5.0
+patch: "5.0"
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Shadowbringers MSQ
+tier: Shadowbringers
 boss: Innocence
 HP: 0
 enrage: 00:00
