--- a/extremes/emanation.yaml
+++ b/extremes/emanation.yaml
@@ -1,9 +1,9 @@
 id: 20049
-patch: 4.0
+patch: "4.0"
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Stormblood MSQ
+tier: Stormblood
 boss: Sri Lakshmi
 HP: 0
 enrage: 00:00
