--- a/extremes/great-hunt.yaml
+++ b/extremes/great-hunt.yaml
@@ -3,7 +3,7 @@ patch: 4.36
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Stormblood MSQ
+tier: Stormblood
 boss: Rathalos
 HP: 0
 enrage: 00:00
