--- a/extremes/memoria-misera.yaml
+++ b/extremes/memoria-misera.yaml
@@ -3,7 +3,7 @@ patch: 5.25
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Shadowbringers MSQ
+tier: Shadowbringers
 boss: Varis yae Galvus
 HP: 0
 enrage: 00:00
