--- a/extremes/seat-of-sacrifice.yaml
+++ b/extremes/seat-of-sacrifice.yaml
@@ -3,7 +3,7 @@ patch: 5.3
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Shadowbringers MSQ
+tier: Shadowbringers
 boss: Elidibus
 HP: 0
 enrage: 00:00
