--- a/extremes/storms-crown.yaml
+++ b/extremes/storms-crown.yaml
@@ -3,7 +3,7 @@ patch: 6.2
 date: 2022-11-04
 modified: 2022-11-04
 author: 27637301
-tier: Endwalker MSQ
+tier: Endwalker
 boss: Barbariccia
 HP: 0
 enrage: 00:00
