--- a/extremes/the-navel.yaml
+++ b/extremes/the-navel.yaml
@@ -3,7 +3,7 @@ patch: 2.1
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: A Realm Reborn MSQ
+tier: A Realm Reborn
 boss: Titan
 HP: 0
 enrage: 00:00
