--- a/extremes/thornmarch.yaml
+++ b/extremes/thornmarch.yaml
@@ -3,7 +3,7 @@ patch: 2.2
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: A Realm Reborn MSQ
+tier: A Realm Reborn
 boss: Good King Moggle Mog XII
 HP: 0
 enrage: 00:00
