--- a/extremes/tsukuyomis-pain.yaml
+++ b/extremes/tsukuyomis-pain.yaml
@@ -3,7 +3,7 @@ patch: 4.3
 date: 2022-11-22
 modified: 2022-11-22
 author: 27637301
-tier: Stormblood MSQ
+tier: Stormblood
 boss: Tsukuyomi
 HP: 0
 enrage: 00:00
