--- a/raids/p5s.yaml
+++ b/raids/p5s.yaml
@@ -1,11 +1,10 @@
 id: 30117
 patch: 6.2
 date: 2022-10-03
-modified: 2022-10-03
+modified: 2022-11-24
 author: 27637301
 tier: Abyssos
 boss: Proto-Carbuncle
-background: '#0c130d'
 HP: 29844576
 enrage: 10:00
 required_dps: 49200
@@ -137,7 +136,7 @@ actions:
     description: "Uses the following sequence of attacks: 7 hits of [a:30479] → [a:30481] (or: get behind → wait → get in front). The last hit of the [a:30479] sequence is the double claw finisher. This is your cue to switch sides, as [a:30481] will hit the rear immediately after, with no additional cast time."
     note: Both [a:30481] and [a:30479] have very unforgiving snapshots. Try to make sure you are as close to [boss] as possible so you can move behind it just as (or even *before*) the last hit of [a:30479] comes out.
   30793:  # Devour
-    description: "[boss] lowers itself to all fours and "
+    description: "[boss] lowers itself to all fours and prepares to "
   30497:  # Sonic Shatter
     target: 0
     type: M
@@ -146,7 +145,7 @@ actions:
   30499:  # Acidic Slaver
     target: 0
     type: M
-    damage: 999999.0
+    damage: 9999999
     description: This is the [t:enrage].
 timeline:
   - at: 00:10
