--- a/raids/p8s1.yaml
+++ b/raids/p8s1.yaml
@@ -9,6 +9,7 @@ suffix: " Part 1"
 HP: 29844576
 enrage: 10:00
 required_dps: 59800
+autos: M/1
 wip: true
 description: Featuring mechanics with unforgiving snapshots that demand good team coordination and a quick eye, [fight] is one of the most dangerous first floor encounters the game has ever had. [boss]'s auto-attacks are physical, but its abilities feature a wide variety of magical and physical attacks. The fight also features a special Satiety Duty Gauge that gradually drains over the course of the fight, but you can essentially ignore it entirely.
 status:
