--- a/enums/target-types.yaml
+++ b/enums/target-types.yaml
@@ -1,16 +1,27 @@
-- name: Raidwide
-  description: Hits every party member at the same time.
-- name: Primary target
-  description: Hits the party member with the highest enmity.
-- name: Secondary target
-  description: Hits the party member with the second-highest enmity.
-- name: Farthest player
-  description: Hits the player who is farthest from the source (usually the boss).
-- name: Closest player
-  description: Hits the player who is closest to the source (usually the boss).
-- name: Healers
+raid:
+  name: Everyone
+  description: Targets every party member at the same time.
+MT:
+  name: Primary target
+  description: Targets the party member with the highest enmity (main tank).
+OT:
+  name: Secondary target
+  description: Targets the party member with the second-highest enmity (off-tank).
+farthest:
+  name: Farthest player
+  description: Targets the player who is farthest from the source (usually the boss).
+closest:
+  name: Closest player
+  description: Targets the player who is closest to the source (usually the boss).
+healers:
+  name: Healers
   description: Targets both healers. If less than two healers are alive, usually targets a random party member.
-- name: Primary target (Shared)
-  description: Hits the player with the highest enmity with an attack that must be shared by another player.
-- name: Double
-  description: Hits the two players with the highest enmity.
+roles:
+  name: Roles
+  description: Targets one DPS and one tank or healer.
+MTOT:
+  name: Primary targets
+  description: Targets the two players with the highest enmity.
+random:
+  name: Random
+  description: Targets a completely random party member.
