--- a/raids/p11s.yaml
+++ b/raids/p11s.yaml
@@ -7,7 +7,9 @@ tier: Anabaseios
 boss: Themis
 HP: 49884204
 average_hp: 73000
-autos: P/1
+autos:
+  target: MT
+  type: physical
 wip: true
 description: Elidibus faces the players yet again, yet this time not as the Warrior of Light of eld but as the Emissary, who balances the powers of both Light and Dark.
 status:
