--- a/raids/p12s1.yaml
+++ b/raids/p12s1.yaml
@@ -8,7 +8,9 @@ boss: Athena
 suffix: " Part 1"
 HP: 32790420
 average_hp: 73000
-autos: M/1
+autos:
+  target: MT
+  type: magic
 wip: true
 description: |
   Athena is a difficult encounter. Featuring rapid combinations of mechanics by both Athena and her soul-transformed minions,
