--- a/raids/p12s2.yaml
+++ b/raids/p12s2.yaml
@@ -8,7 +8,9 @@ boss: Pallas Athena
 suffix: " Part 2"
 HP: 40192744
 average_hp: 73000
-autos: M/1
+autos:
+  target: MT
+  type: magic
 spoiler: true
 wip: true
 description: |
