--- a/raids/p8s1.yaml
+++ b/raids/p8s1.yaml
@@ -8,7 +8,9 @@ boss: Hephaistos
 suffix: " Part 1"
 HP: 29844576
 average_hp: 60000
-autos: M/1
+autos:
+  target: MT
+  type: magic
 wip: true
 description: Unknown
 status:
