--- a/enums/target-types.yaml
+++ b/enums/target-types.yaml
@@ -1,27 +1,36 @@
 raid:
-  name: Everyone
+  name: everyone
   description: Targets every party member at the same time.
 MT:
-  name: Primary target
+  name: MT
   description: Targets the party member with the highest enmity (main tank).
 OT:
-  name: Secondary target
+  name: OT
   description: Targets the party member with the second-highest enmity (off-tank).
 farthest:
-  name: Farthest player
+  name: farthest
   description: Targets the player who is farthest from the source (usually the boss).
 closest:
-  name: Closest player
+  name: closest
   description: Targets the player who is closest to the source (usually the boss).
 healers:
-  name: Healers
+  name: healers
   description: Targets both healers. If less than two healers are alive, usually targets a random party member.
-roles:
-  name: Roles
+supports:
+  name: supports
+  description: Targets all supports (tanks and healers). If less than four supports are alive, usually starts targeting random party members.
+dps:
+  name: DPS
+  description: Targets all DPS players. If less than four DPS players are alive, usually starts targeting random party members.
+rolesplit:
+  name: role split
   description: Targets one DPS and one tank or healer.
+roles:
+  name: roles
+  description: Targets all members of one role (either all DPS or all supports).
 MTOT:
-  name: Primary targets
+  name: MT & OT
   description: Targets the two players with the highest enmity.
 random:
-  name: Random
+  name: random
   description: Targets a completely random party member.
